# mulch-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/kb/src/: cli.rs  main.rs
crates/kb/src/commands/: guard.rs  learn.rs  mod.rs
crates/mulch/: Cargo.toml
crates/mulch-core/: Cargo.toml
crates/mulch-core/src/: budget.rs  config.rs  error.rs  filter.rs  format.rs  git.rs  health.rs  id.rs  lib.rs  lock.rs  markers.rs  resolve.rs  scoring.rs  search.rs  storage.rs  types.rs
crates/mulch/src/: cli.rs  context.rs  main.rs  output.rs
crates/mulch/src/commands/: add.rs  compact.rs  delete.rs  diff.rs  doctor.rs  edit.rs  init.rs  learn.rs  mod.rs  onboard.rs  prime.rs  prune.rs  query.rs  ready.rs  record.rs  remove.rs  search.rs  setup.rs  status.rs  sync_cmd.rs  update.rs  validate.rs
crates/mulch/tests/: integration.rs
