[package]
name = "mulch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Structured expertise management for AI coding agents"

[[bin]]
name = "mulch"
path = "src/main.rs"

[dependencies]
mulch-core = { path = "../mulch-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
owo-colors = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
